[package]
name = "fr-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
derive = ["fr-codec-derive"]

[dependencies]
fr-codec-derive = { workspace = true, optional = true }
fr-limited-vec = { workspace = true }
bitvec = { workspace = true }
thiserror = { workspace = true }
