[package]
name = "fr-erasure-coding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-common = { workspace = true }
rayon = { workspace = true }
reed-solomon-simd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
