[package]
name = "fr-asn-types"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
fr-block = { workspace = true }
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-merkle = { workspace = true }
fr-state = { workspace = true }
bit-vec = { workspace = true }
serde = { workspace = true }
